
Notice:
- Building and running SignServer on Java 7 is no longer supported.
- SignServer now requires a Java EE 7+ application server. Support for JBoss AS 7 has thus been dropped.
- Due to a bug in the Apache POI library, signing MSI files using SignClient in client-side hashing
  mode when running on Windows using Java 9, or later, leaves open files handles until the Java process
  exits.

SignServer 4.4.1
----------------

General:
- New Authorizer component for logging cookies from the request
- Improvements to startup scripts

SignClient:
- While SignServer still requires Java 7 or 8, the Client command line interface (SignClient) can now additionally also be run on Java 11.
- Error handling improvements

Notice:
- Running SignClient with SignServer running on GlassFish V3
  has not been completely tested for this release.


SignServer 4.3.2
----------------

General:
- New authorizer for logging cookies from the request

Time-stamping:
- Performance test CLI now uses SHA-256 for the time-stamp request


SignServer 4.4.0
----------------

New features and improvements:
- Support for on-demand generated one-time keys with short-lived
  certificates issued from EJBCA.
- 12 other minor improvements

Bug fixes:
- Time-stamp hash algorithm used by XAdESSigner should be configurable
- Error with MSI signing when certificate not installed in token
- OCSP validator failed with external OCSP responder
- Admin GUI download bundle failed to start
- 7 other bug fixes

Notice:
- By default CACHE_PRIVATEKEY is now enabled for all signers. To get the 
  old behaviour for a signer, set CACHE_PRIVATEKEY=false.
- By default the CESeCore keystore cache is now disabled. To get the old
  behaviour it needs to be explicitly enabled in conf/cesecore.properties
  Note: it can not be enabled when using the new one-time crypto and is a
  global setting.


SignServer 4.3.1
----------------

General:
- Sensitive information masked in status output, configuration and logs.
