@@ -20,7 +20,6 @@ import org.signserver.server.SignServerContext;
 import org.signserver.server.log.AdminInfo;
 import org.signserver.server.log.BaseWorkerLogger;
 import org.signserver.server.log.IWorkerLogger;
-import org.signserver.server.log.Loggable;
 import org.signserver.server.log.WorkerLoggerException;
 
 /**
