@@ -42,7 +42,7 @@ public interface ITimeStampLogger extends IWorkerLogger {
 
     String LOG_TSA_TIMESTAMPREQUEST_NONCRITEXTOIDS = "TSA_TIMESTAMPREQUEST_NONCRITEXTOIDS";
 
-    String LOG_TSA_TIMESTAMPREQUEST_NOUNCE = "TSA_TIMESTAMPREQUEST_NOUNCE";
+    String LOG_TSA_TIMESTAMPREQUEST_NONCE = "TSA_TIMESTAMPREQUEST_NONCE";
 
     String LOG_TSA_TIMESTAMPREQUEST_VERSION = "TSA_TIMESTAMPREQUEST_VERSION";
 
